# jbterminal

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
data/: help.txt  jbtc.json  jbtr.json
src/: index.ts  main.rs
src/jailbreak/: consts.rs  mod.rs  traits.rs  types.rs  util.rs
src/jailbreak/models/: dupers.rs  jbtc.rs  jbtrading.rs  mod.rs
src/jailbreak/models/dupers/: mod.rs  parsers.rs
src/jailbreak/models/jbtc/: mod.rs  parser.rs
src/jailbreak/models/jbtr/: mod.rs  parser.rs
src/trading/: base.ts  index.ts  types.ts  update.ts  util.ts
src/trading/dupes/: values.json
src/trading/jbtc/: index.ts  parser.ts  values.json
src/trading/jbtrading/: index.ts  parser.ts  values.json
src/ui/: app.rs  mod.rs  state.rs
src/ui/widgets/: todo.md
