[package]
name = "jbterminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
google-authz = "0.0.2"
ratatui = "0.26.2"
reqwest = { version = "0.12.3", features = ["blocking"] }
scraper = "0.19.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.116"
